--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,11 @@
 # in the templates via {{ site.myvariable }}.
 title: Lenbitz.io
 email: lenbitz@lenbitz.io
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: > Random rant between code, electronics and drones.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://lenbitz.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://jekyll.lenbitz.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: lano78
-# github_username:  jekyll
+github_username:  larsnordstrom
 instagram_username: lenbitzFPV
 
 # Build settings
@@ -41,7 +38,8 @@ exclude:
   - script
   - lenbitz.io.sublime.project
   - lenbitz.io.sublime-workspace
-  - circle.yaml
+  - circle.yml
+  - travis.yml
   
 atom:
   buildCommand:
