--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ username_youtube: lenbitzFPV
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
