--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ encoding: utf-8
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-hacker
+theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
