--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ before_script:
 script: ./script/cibuild
 
 # branch whitelist, only for GitHub Pages
-branches:
-  only:
-  - gh-pages     # test the gh-pages branch
-  - /pages-(.*)/ # test every branch which starts with "pages-"
+#branches:
+  #only:
+  #- master
+  #- gh-pages     # test the gh-pages branch
+  #- /pages-(.*)/ # test every branch which starts with "pages-"
 
 env:
   global:
