Added file to exclude

--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,9 @@ exclude:
   - lenbitz.io.sublime-workspace
   - circle.yml
   - travis.yml
+  - .jekyll-metadata
+  - .DS_Store
+  
   
 atom:
   buildCommand:
