--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Lenbitz.io
 email: lenbitz@lenbitz.io
-description: Random rant between code, electronics and drones.
+description: Random rant about code, electronics and drones.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://jekyll.lenbitz.io" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -41,13 +41,14 @@ exclude:
   - start.sh
   - vendor
   - script
-  - lenbitz.io.sublime.project
+  - lenbitz.io.sublime-project
   - lenbitz.io.sublime-workspace
   - circle.yml
   - travis.yml
   - .jekyll-metadata
   - .DS_Store
-  
+  - README.txt
+  - .gitignore
   
 atom:
   buildCommand:
