--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,23 @@ rvm:
 - 2.4.1
 
 before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
+ - chmod +x ./script/cibuild 
 
-# Assume bundler is being used, therefore
-# the `install` step will run `bundle install` by default.
 script: ./script/cibuild
 
-# branch whitelist, only for GitHub Pages
+# branch whitelist.
 branches:
   only:
   - master
-  - gh-pages     # test the gh-pages branch
-  #- /pages-(.*)/ # test every branch which starts with "pages-"
-
+  - gh-pages # test the gh-pages branch
+  
 env:
   global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+  #- "FTP_USER=xxx"
+  #- "FTP_PASSWORD=xxx"
 
-sudo: false # route your build to the container-based infrastructure for a faster build
+after_success:
+	# "curl --ftp-create-dirs -T uploadfilename -u $FTP_USER:$FTP_PASSWORD ftp://sitename.com/directory/myfile"
+	
+sudo: false
