Added affiliate to _data, changes to gemfile

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ username_twitter: lano78
 usename_github: larsnordstrom
 username_instagram: lenbitzFPV
 username_youtube: lenbitzFPV
+username_paypal: lano78
+username_bitcoin: abc
+username_patreon: lenbitzfpv
 
 timezone: Europe/Stockholm
 encoding: utf-8
