Excluding pages I’m just testing things with

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,8 @@ exclude:
   - README.txt
   - .gitignore
   - _posts/2017-12-27-first-game-in-p5.md
+  - onepage.md
+  - 404.md
   
 atom:
   buildCommand:
